--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,13 @@
   publisher	= {Now Publishers, Inc.}
 }
 
+@book{andrienko2006,
+  title={Exploratory analysis of spatial and temporal data: a systematic approach},
+  author={Andrienko, Natalia and Andrienko, Gennady},
+  year={2006},
+  publisher={Springer Science \& Business Media}
+}
+
 @misc{pavlo2024,
   author = {Pavlo, Andy},
   title = {CMU Intro to Database Systems},
