--- a/system.Rmd
+++ b/system.Rmd
@@ -924,7 +924,8 @@ tab$i_product <- 3 * tab$i_1 + tab$i_2
 tab <- tab[, c(2, 1, 3)]
 
 colnames(tab) <- c("Factor 1 index", "Factor 2 index", "Product index")
-knitr::kable(tab, caption = "An example of product indices computed across two factors.")
+knitr::kable(tab, caption = "An example of product indices computed across two factors.",
+             booktabs = TRUE)
 ```
 
 Finally, given a product index $i_{\text{product}}$, we can also recover the original indices (assuming $k$ is known):
@@ -983,7 +984,8 @@ tab <- data.frame(
   index = c(7, 6, 5, 4, 3, 2, 1, 0)
   )
 
-knitr::kable(tab, caption = "Mappings between groups assignment and `Marker` indices.")
+knitr::kable(tab, caption = "Mappings between groups assignment and `Marker` indices.", 
+             booktabs = TRUE)
 ```
 
 As you can see from Table \@ref(tab:index-table), selection groups are mapped to indices in reverse order. Transient group indices have lower values than persistent ones, and persistent groups are sorted in descending order. This reverse ordering is designed to simplify stacking operations. Group assignment inherently implies importance or salience, and, and during stacking, we often want the more "important" selected groups have to higher precedence than less significant, unselected ones [see also @urbanek2011]. For instance, in stacked barplots, the visually salient highlighted bar segments are generally placed at the base (y-axis intercept), and likewise, in dotplots, the highlighted circles are placed at the center, meaning that both have to come first in the aggregation order. Having the group indices coded in reverse order eliminates the need for sorting during later stages of the data visualization pipeline.  
